--- a/order.html
+++ b/order.html
@@ -86,12 +86,14 @@
       <div class="row vertical-align">
         <div class="col-md-8">
           <span>Am nevoie de</span>
-          <select id="order-input">
-            <option value="0" class="blue small-select">Alege din lista.</option>
-            <option value="/website-order.html" class="small-select blue">Website</option>
-            <option value="/logo-order.html" class="small-select blue">Logo</option>
-            <option value="/design-order.html" class="small-select blue">Design</option>
-          </select>
+         <div class="select-wrapper">
+              <select id="order-input">
+                <option value="0" class="blue small-select">Alege din lista.</option>
+                <option value="/website-order.html" class="small-select blue">Website</option>
+                <option value="/logo-order.html" class="small-select blue">Logo</option>
+                <option value="/design-order.html" class="small-select blue">Design</option>
+              </select>
+            </div>
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
