images for order

--- a/order.html
+++ b/order.html
@@ -103,17 +103,17 @@
             <ul class="slides">
               <!-- 1st - item -->
               <li>
-                <img src="images/blana-order.png" alt="">
+                <img src="images/portofoliu/blana-order.png" alt="">
                 <span class="nothing"></span>
               </li>
               <!-- 2nd - item -->
               <li>
-                <img src="images/aripau-order.png" alt="">
+            <img src="images/portofoliu/aripau-order.png" alt="">
                 <span class="nothing"></span>
               </li>
               <!-- 3rd - item -->
               <li>
-                <img src="images/drdave-order.png" alt="">
+             <img src="images/portofoliu/drdave-order.png" alt="">
                 <span class="nothing"></span>
               </li>
               <!-- 4th - item -->
@@ -123,12 +123,12 @@
               </li>
               <!-- 5th - item -->
               <li>
-                <img src="images/cgbc-order.png" alt="">
+               <img src="images/portofoliu/cgbc-order.png" alt="">
                 <span class="nothing"></span>
               </li>
               <!-- 6th - item -->
               <li>
-                <img src="images/otbs-order.png" alt="">
+               <img src="images/portofoliu/otbs-order.png" alt="">
                 <span class="nothing"></span>
               </li>
               <!-- 7th - item -->
